# ML-Lab---Physics-informed-Transformer

./: README.md
reference_generator/reference_generator/reference_generator/: reference_generator.py
simulation/cartesian_impedance_mujoco_launch_pkg/: package.xml  setup.cfg  setup.py
simulation/cartesian_impedance_mujoco_launch_pkg/launch/: cartesian_impedance_mujoco_launch.py
simulation/mujoco_joint_commander_cpp/: CMakeLists.txt  package.xml
simulation/mujoco_joint_commander_cpp/src/: Cartesian_Impedance_controller.cpp  Cartesian_Position_PID_controller.cpp  WORKING_withKDL_joint_commander_cpp.cpp  joint_commander.cpp  joint_commander_cpp_working_withestimator.cpp
simulation/mujoco_models/franka_panda/: mjx_panda.xml  mjx_panda_nohand.xml  panda_nohand.xml  panda_nohand_ros2.xml  scenes or simulations  softbox.xml  trilinear.xml
simulation/mujoco_ros2/: CMakeLists.txt
simulation/mujoco_ros2/include/mujoco_ros2/: mujoco_ros.hpp
simulation/mujoco_ros2/launch/: franka_example.py
simulation/mujoco_ros2/src/: mujoco_ros.cpp
simulation/reference_generator/: package.xml  setup.cfg  setup.py
simulation/robot_descriptions/urdf/: panda.urdf  panda_no_gripper.urdf
